feat/nav e navegacao melhorada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<<h1>ZA WARUDO</h1>
-<nav>
-  <ul>
-    <li><a routerLink="/desk-editor" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a></li>
-    <li><a routerLink="/desk-manager" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
-  </ul>
-</nav>
-<router-outlet></router-outlet>
+<div class="d-flex-row">
+  <nav></nav>
+  <div class="d-flex-col">
+    <router-outlet> </router-outlet>
+  </div>
+</div>
